Lab 11 testing